Refactor music section layout and adjust spacing in football article

--- a/index.html
+++ b/index.html
@@ -119,33 +119,35 @@
                     <h3>Música</h3>
                     <p>Sempre gostei de ouvir qualquer tipo de música, nunca fui muito preso a um único estilo. Gosto de explorar novos gênero e artistas. Uma época tentei aprender a tocar guitarra, mas não tive muito sucesso &#128517.</p>
                     <p>Aqui estão alguns albúns de artistas que eu gosto:</p>
-                    <a href="https://www.youtube.com/watch?v=vL9KRz3Ttyo&list=OLAK5uy_mHZ5vxBwGRTXPYp9os77XODIXOPbnpMSo">
-                        <img src="images/amir-capa.jpg" alt="Capa do álbum Amir" title="Amir - Tamino" width="200" height="200">
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=diIFhc_Kzng&list=PLzoqV_VvWIwGzYTcm3r1JwqgQOBXTvKyd">
-                        <img src="images/blonde-capa.jpg" alt="Capa do álbum Blonde" title="Blonde - Frank Ocean" width="200" height="200">
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=v43du81eZHw&list=OLAK5uy_kj4AtJgiE2j8AeGhDCxPnbSM3j_JjGtI4">
-                        <img src="images/clubeDaEsquina-capa.jpg" alt="Capa do álbum Clube da Esquina" title="Clube da Esquina - Milton Nascimento e Lô Borges" width="200" height="200">
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=V4BFGSZ_1ls&list=OLAK5uy_kDil7bSw2xMW6yCGOXTbwz96McxRXGyPI">
-                        <img src="images/circles-capa.jpg" alt="Capa do álbum Circles" title="Circles - Mac Miller" width="200" height="200">
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=HvldypUz9w8&list=OLAK5uy_nyGwUonJ0qUih88Bu51Z2bCUlbGN-KWoI">
-                        <img src="images/doolittle-capa.jpg" alt="Capa do álbum Doolittle" title="Doolittle - Pixies" width="200" height="200">
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=WBjmnqewTeo&list=OLAK5uy_mtmY9Poc-2LNeevYMquEfivdsw94JhJcI">
-                        <img src="images/immunity-capa.jpg" alt="Capa do álbum Immunity" title="Immunity - Clairo" width="200" height="200">
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=iaMWpCCSdqg&list=OLAK5uy_kwDJt67E2HL9pRVQdqTfD9GtphH9rzZSg">
-                        <img src="images/LaminatePetAnimal-capa.jpg" alt="Capa do álbum Laminate Pet Animal" title="Laminate Pet Animal - Snowmine" width="200" height="200">
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=jNY_wLukVW0&list=OLAK5uy_nEGbRK3IZ018QZqnVmZtq-0k-vtJdysnA">
-                        <img src="images/okComputer-capa.jpg" alt="Capa do álbum OK Computer" title="OK Computer - Radiohead" width="200" height="200">
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=REzdbqfiN9o&list=OLAK5uy_kh9CfbToSbMhmJvdlNIm7cxAinBkqvPyQ">
-                        <img src="images/toHellWithIt-capa.jpg" alt="Capa do álbum To Hell With It" title="To Hell With It - PinkPantheress" width="200" height="200">
-                    </a>
+                    <div class="grid-figures">
+                        <a href="https://www.youtube.com/watch?v=vL9KRz3Ttyo&list=OLAK5uy_mHZ5vxBwGRTXPYp9os77XODIXOPbnpMSo">
+                            <img src="images/amir-capa.jpg" alt="Capa do álbum Amir" title="Amir - Tamino" width="200" height="200">
+                        </a>
+                        <a href="https://www.youtube.com/watch?v=diIFhc_Kzng&list=PLzoqV_VvWIwGzYTcm3r1JwqgQOBXTvKyd">
+                            <img src="images/blonde-capa.jpg" alt="Capa do álbum Blonde" title="Blonde - Frank Ocean" width="200" height="200">
+                        </a>
+                        <a href="https://www.youtube.com/watch?v=v43du81eZHw&list=OLAK5uy_kj4AtJgiE2j8AeGhDCxPnbSM3j_JjGtI4">
+                            <img src="images/clubeDaEsquina-capa.jpg" alt="Capa do álbum Clube da Esquina" title="Clube da Esquina - Milton Nascimento e Lô Borges" width="200" height="200">
+                        </a>
+                        <a href="https://www.youtube.com/watch?v=V4BFGSZ_1ls&list=OLAK5uy_kDil7bSw2xMW6yCGOXTbwz96McxRXGyPI">
+                            <img src="images/circles-capa.jpg" alt="Capa do álbum Circles" title="Circles - Mac Miller" width="200" height="200">
+                        </a>
+                        <a href="https://www.youtube.com/watch?v=HvldypUz9w8&list=OLAK5uy_nyGwUonJ0qUih88Bu51Z2bCUlbGN-KWoI">
+                            <img src="images/doolittle-capa.jpg" alt="Capa do álbum Doolittle" title="Doolittle - Pixies" width="200" height="200">
+                        </a>
+                        <a href="https://www.youtube.com/watch?v=WBjmnqewTeo&list=OLAK5uy_mtmY9Poc-2LNeevYMquEfivdsw94JhJcI">
+                            <img src="images/immunity-capa.jpg" alt="Capa do álbum Immunity" title="Immunity - Clairo" width="200" height="200">
+                        </a>
+                        <a href="https://www.youtube.com/watch?v=iaMWpCCSdqg&list=OLAK5uy_kwDJt67E2HL9pRVQdqTfD9GtphH9rzZSg">
+                            <img src="images/LaminatePetAnimal-capa.jpg" alt="Capa do álbum Laminate Pet Animal" title="Laminate Pet Animal - Snowmine" width="200" height="200">
+                        </a>
+                        <a href="https://www.youtube.com/watch?v=jNY_wLukVW0&list=OLAK5uy_nEGbRK3IZ018QZqnVmZtq-0k-vtJdysnA">
+                            <img src="images/okComputer-capa.jpg" alt="Capa do álbum OK Computer" title="OK Computer - Radiohead" width="200" height="200">
+                        </a>
+                        <a href="https://www.youtube.com/watch?v=REzdbqfiN9o&list=OLAK5uy_kh9CfbToSbMhmJvdlNIm7cxAinBkqvPyQ">
+                            <img src="images/toHellWithIt-capa.jpg" alt="Capa do álbum To Hell With It" title="To Hell With It - PinkPantheress" width="200" height="200">
+                        </a>
+                    </div>
                 </article>
                 <article id="futebol">
                     <h3>Futebol</h3>
